Added fallback for unknown errors

--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -64,6 +64,7 @@
     }
   },
   "error": {
+    "unknown_error": "Unknown error occurred",
     "title": {
       "init_session": "Initialize session failed",
       "validate_session": "Validate session failed",
