Started work on settings field

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -37,6 +37,7 @@
     "snapshot_settings": "Snapshot settings",
     "snapshot_history_chart": "Snapshot history",
     "ui_settings": "Interface",
+    "log_settings": "Log",
     "general": "General"
   },
   "label": {
