Added a new column that displays the tab names an item exists in

--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -8,7 +8,8 @@
     "corrupted": "Corrupted",
     "stacksize": "Quantity",
     "calculated": "Price",
-    "total": "Total"
+    "total": "Total",
+    "tab_names": "Tabs"
   },
   "label": {
     "item_table_placeholder": "No items found for the selected profile, take a snapshot to begin (top right)",
