Reworked the auto complete for stash tabs

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -41,6 +41,7 @@
     "general": "General"
   },
   "label": {
+    "stash_tabs": "Stash tabs",
     "support": "Support",
     "required": "Required",
     "optional": "Optional",
