--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -42,6 +42,7 @@
   },
   "label": {
     "stash_tabs": "Stash tabs",
+    "add_stash_tabs": "Add tabs",
     "support": "Support",
     "required": "Required",
     "optional": "Optional",
@@ -53,6 +54,7 @@
     "select_profile": "Select profile",
     "select_character": "Select character",
     "select_stash_tabs": "Select stash tabs",
+    "filter_stash_tabs": "Filter current stash tabs",
     "profile_placeholder": "Select a profile",
     "group_name": "Group name",
     "group_name_placeholder": "Enter a group name",
