--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -54,7 +54,7 @@
     "select_profile": "Select profile",
     "select_character": "Select character",
     "select_stash_tabs": "Select stash tabs",
-    "filter_stash_tabs": "Filter current stash tabs",
+    "filter_stash_tabs": "Filter stash tabs (doesn't change profile)",
     "profile_placeholder": "Select a profile",
     "group_name": "Group name",
     "group_name_placeholder": "Enter a group name",
