--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -14,7 +14,7 @@
   "label": {
     "item_table_placeholder": "No items found for the selected profile, take a snapshot to begin (top right)",
     "stash_tab_dropdown_placeholder": "No stash tabs found",
-    "search_text": "Search items"
+    "search_text": "Type something here to filter items"
   },
   "value": {
     "true": "Yes",
