--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -8,7 +8,7 @@
     "corrupted": "Corrupted",
     "stacksize": "Quantity",
     "calculated": "Price",
-    "total": "Total",
+    "total": "Total value",
     "tab_names": "Tabs"
   },
   "label": {
