--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -94,7 +94,7 @@
     "here": "here",
     "to_update_now": "to update now!",
     "prices_fetched_from": "Prices fetched from ",
-    "prices_fetched_from_interval": "every 20 min",
+    "prices_fetched_from_interval": "Updated every 20 minutes",
     "not_available": "N/A",
     "hour_suffix": "/ h",
     "low_confidence_pricing": "Activate low confidence pricing",
