Started reworking the chart

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -88,6 +88,7 @@
     "toggle_visibility_icon_title": "Show/hide",
     "net_worth_export": "Export data",
     "net_worth_chart": "Net worth chart",
+    "tab_chart": "Tab breakdown chart",
     "these_terms_inline": "these terms",
     "update_available": "Update available, ",
     "click": "click",
