Added missing translations

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -86,6 +86,7 @@
     "account_icon_title": "My account",
     "group_icon_title": "Groups",
     "toggle_visibility_icon_title": "Show/hide",
+    "clear_search_icon_title": "Clear search field",
     "net_worth_export": "Export data",
     "net_worth_chart": "Net worth chart",
     "tab_chart": "Tab breakdown chart",
