Added loading translation

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -75,6 +75,7 @@
     "join_group": "Join group",
     "overlay_icon_title": "Open overlay",
     "create_group": "Create group",
+    "loading_title": "Loading",
     "toggle_menu_title": "Toggle menu",
     "edit_profile_icon_title": "Edit profile",
     "create_profile_icon_title": "Create profile",
