Fixes to seed prices and addition of ilvl column to item table

--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -2,6 +2,7 @@
   "header": {
     "icon": "Icon",
     "name": "Name",
+    "ilvl": "Item level",
     "links": "Links",
     "level": "Level",
     "quality": "Quality",
