Calculate and show cumulative item value within ItemTable

--- a/ExilenceNextApp/public/i18n/en/tables.json
+++ b/ExilenceNextApp/public/i18n/en/tables.json
@@ -9,7 +9,7 @@
     "corrupted": "Corrupted",
     "stacksize": "Quantity",
     "calculated": "Price",
-    "total": "Total value",
+    "total": "Total value (Cumulative)",
     "tab_names": "Tabs"
   },
   "label": {
