Updates to income, with reset etc

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -43,6 +43,7 @@
   },
   "label": {
     "stash_tabs": "Stash tabs",
+    "reset": "Reset",
     "add_stash_tabs": "Add tabs",
     "support": "Support",
     "required": "Required",
