--- a/ExilenceNextApp/public/i18n/en/notification.json
+++ b/ExilenceNextApp/public/i18n/en/notification.json
@@ -6,7 +6,7 @@
       "remove_profile": "Remove profile succeeded",
       "get_stash_tabs": "Retrieved stash tabs for {{param}}",
       "get_items": "Retrieved items for {{param}}",
-      "refresh_stash_tabs": "Refreshed stash tabs for {{param}}",
+      "refreshing_stash_tabs": "Refreshed stash tabs for {{param}}",
       "price_stash_items": "Items were successfully priced",
       "get_prices_for_leagues": "Retrieved prices for all leagues",
       "snapshot": "Snapshot created successfully",
@@ -38,7 +38,7 @@
       "remove_profile": "The profile was successfully removed",
       "get_stash_tabs": "Stash tabs for {{param}} were successfully retrieved",
       "get_items": "Items for {{param}} were successfully retrieved",
-      "refresh_stash_tabs": "Stash tabs for {{param}} were successfully refreshed",
+      "refreshing_stash_tabs": "Stash tabs for {{param}} were successfully refreshed",
       "price_stash_items": "Items in the selected stash tabs were successfully priced",
       "get_prices_for_leagues": "Successfully retrieved prices for all leagues",
       "snapshot": "A new snapshot was successfully created and saved",
@@ -74,7 +74,7 @@
       "remove_profile": "Remove profile failed",
       "get_stash_tabs": "Failed retrieving stash tabs for {{param}}",
       "get_items": "Failed retrieving items for {{param}}",
-      "refresh_stash_tabs": "Failed refreshing stash tabs for {{param}}",
+      "refreshing_stash_tabs": "Failed refreshing stash tabs for {{param}}",
       "price_stash_items": "Failed pricing items",
       "get_prices_for_leagues": "Failed retrieving prices for leagues",
       "snapshot": "Failed creating snapshot",
@@ -105,7 +105,7 @@
       "validate_session": "Retrying in 30 seconds",
       "get_stash_tabs": "Failed in retrieving stash tabs for {{param}}",
       "get_items": "Failed in retrieving items for {{param}}",
-      "refresh_stash_tabs": "Failed in refreshing stash tabs for {{param}}",
+      "refreshing_stash_tabs": "Failed in refreshing stash tabs for {{param}}",
       "price_stash_items": "Items in the selected stash tabs could not be priced",
       "get_prices_for_leagues": "Failed in retrieving prices for leagues",
       "snapshot": "The snapshot could not be created",
