--- a/ExilenceNextApp/public/i18n/en/status.json
+++ b/ExilenceNextApp/public/i18n/en/status.json
@@ -7,6 +7,8 @@
         "validating_session": "Validating session",
         "fetching_stash_tab": "Fetching stash tab",
         "pricing_items": "Pricing items",
-        "saving_snapshot": "Saving snapshot"
+        "saving_snapshot": "Saving snapshot",
+        "refreshing_stash_tabs": "Refreshing stash tabs",
+        "fetching_prices": "Fetching new prices"
     }
 }
