--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -125,7 +125,10 @@
     "mozilla_firefox": "Mozilla Firefox",
     "microsoft_edge": "Microsoft Edge",
     "stash_tab_count_warning": "Selecting more than 10 tabs will increase the snapshot duration significantly",
-    "open_on_ninja": "View on poe.ninja"
+    "open_on_ninja": "View on poe.ninja",
+    "get_help": "Get Help",
+    "retake_tour": "Re-take Tour",
+    "whats_new": "What's new"
   },
   "value": {
     "none": "None",
