--- a/ExilenceNextApp/public/i18n/en/stepper.json
+++ b/ExilenceNextApp/public/i18n/en/stepper.json
@@ -5,7 +5,8 @@
     "snapshot_step": "Snapshot section",
     "overlay_step": "Overlay section",
     "group_step": "Group section",
-    "notifications_step": "Notification list"
+    "notifications_step": "Notification list",
+    "support_panel_step": "Support Panel"
   },
   "body": {
     "initial_step": "This tour will guide you through the main functions of the app to get you started quickly.",
@@ -13,6 +14,7 @@
     "snapshot_step": "This is where you take snapshots to see your current net worth, you can also enable automatic snapshotting in the settings.",
     "overlay_step": "Here you can toggle the overlay, for a slim overview while you map!",
     "group_step": "Here you can group up with your friends to see your combined net worth status.",
-    "notifications_step": "Everything that happens in the app will be displayed here."
+    "notifications_step": "Everything that happens in the app will be displayed here.",
+    "support_panel_step": "In case of any issues, re-running this tour or checking out what's new in latest release, this is the place."
   }
 }
