Added base for customizing item prices

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -14,6 +14,7 @@
     "create_group": "Create group",
     "join_group": "Join group",
     "leave_group": "Leave group",
+    "save_custom_price": "Save",
     "lets_begin": "Lets begin!",
     "apply_filter": "Apply filter"
   },
@@ -30,9 +31,11 @@
     "confirm_remove_profile": "Remove profile",
     "confirm_leave_group": "Leave group",
     "ga_consent_dialog_title": "Terms and conditions",
+    "custom_price_dialog_title": "Set custom price",
     "net_worth_settings": "Net worth",
     "misc_settings": "Misc",
     "pricing_settings": "Pricing settings",
+    "custom_prices_settings": "Custom prices",
     "create_group_dialog_title": "Create new group",
     "join_group_dialog_title": "Join existing group",
     "snapshot_settings": "Snapshot settings",
