Visual tweaks to price table

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -35,7 +35,7 @@
     "net_worth_settings": "Net worth",
     "misc_settings": "Misc",
     "pricing_settings": "Pricing settings",
-    "custom_prices_settings": "Custom prices",
+    "custom_prices_settings": "Prices",
     "create_group_dialog_title": "Create new group",
     "join_group_dialog_title": "Join existing group",
     "snapshot_settings": "Snapshot settings",
