--- a/ExilenceNextApp/public/i18n/en/stepper.json
+++ b/ExilenceNextApp/public/i18n/en/stepper.json
@@ -15,6 +15,6 @@
     "overlay_step": "Here you can toggle the overlay, for a slim overview while you map!",
     "group_step": "Here you can group up with your friends to see your combined net worth status.",
     "notifications_step": "Everything that happens in the app will be displayed here.",
-    "support_panel_step": "In case of any issues, re-running this tour or checking out what's new in latest release, this is the place."
+    "support_panel_step": "Here you can see what's new in latest release, report a bug, submit a feature request, re-run this tour or get our discord server invitation."
   }
 }
