--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -32,7 +32,7 @@
     "confirm_leave_group": "Leave group",
     "ga_consent_dialog_title": "Terms and conditions",
     "custom_price_dialog_title": "Set custom price",
-    "net_worth_settings": "Net worth",
+    "net_worth_settings": "General",
     "misc_settings": "Misc",
     "pricing_settings": "Pricing settings",
     "custom_prices_settings": "Prices",
