fix: ui scaling on input

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -140,7 +140,8 @@
     "faq": "FAQ",
     "bug_report": "Bug Report",
     "feature_request": "Feature Request",
-    "support_us": "Support Us"
+    "support_us": "Support Us",
+    "reset_to_default": "Reset to default"
   },
   "value": {
     "none": "None",
