feat: reset indexeddb

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -46,7 +46,8 @@
     "general": "General",
     "session_id_dialog": "How to find your session Id",
     "log_settings": "Log",
-    "hardware_acceleration": "Hardware Acceleration"
+    "hardware_acceleration": "Hardware Acceleration",
+    "reset_indexeddb": "Reset Data"
   },
   "label": {
     "no_prices_retrieved": "Waiting for prices",
@@ -171,6 +172,9 @@
     "clear_snapshots": "Are you sure you want to clear all snapshots for the current profile?",
     "remove_profile": "Are you sure you want to remove your profile?",
     "leave_group": "Are you sure you want to leave your current group?",
+    "reset_indexeddb": "Are you sure you want to reset your data?",
+    "reset_indexeddb_notice": "Your league data, account data and local settings will be cleared.",
+    "reset_indexeddb_signout": "Performing this action will sign you out.",
     "ga_consent_main_text": "We use Google Analytics in Exilence Next. This means we track how you interact with the app, in order to improve it further.",
     "ga_consent_sub_text": "To clarify, we don't track anything related to your Path of Exile account in Google Analytics, and can't identify you as a user.",
     "ga_consent_short_text": "By proceeding below, you agree to ",
