Added functionality to delete last snapshot on client

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -95,7 +95,8 @@
     "edit_profile_icon_title": "Edit profile",
     "create_profile_icon_title": "Create profile",
     "fetch_snapshot_icon_title": "Fetch snapshot",
-    "remove_snapshot_icon_title": "Remove snapshots",
+    "remove_snapshots_icon_title": "Remove all snapshots",
+    "remove_snapshot_icon_title": "Remove last snapshot",
     "remove_profile_icon_title": "Remove profile",
     "notification_icon_title": "Notifications",
     "session_id_icon_title": "Help finding session ID",
