Added credit section

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -144,6 +144,7 @@
     "discord": "Discord Server",
     "retake_tour": "Re-take Tour",
     "whats_new": "What's new",
+    "credits": "Credits",
     "faq": "FAQ",
     "bug_report": "Bug Report",
     "feature_request": "Feature Request",
