--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -76,6 +76,7 @@
     "select_profile": "Select profile",
     "select_character": "Select character",
     "select_stash_tabs": "Select stash tabs",
+    "select_platform": "Select platform",
     "filter_stash_tabs": "Filter stash tabs",
     "profile_placeholder": "Select a profile",
     "group_name": "Group name",
