--- a/ExilenceNextApp/public/i18n/en/error.json
+++ b/ExilenceNextApp/public/i18n/en/error.json
@@ -8,5 +8,5 @@
     "connection_not_found": "Connection not found",
     "no_token_set": "No token set",
     "token_expired_meta": "Session expired",
-    "token_expired": "Session expired, please login again using a new session Id"
+    "token_expired": "Session expired, please login again"
 }
