Features/new oauth2 flow (#670)
* Started working on support for the new scopes

* Session id removal work in progress

* Concept for redirecting from the browser

* Update external.service.ts

* Cleanup

* Cleanup

* Translation update

* Translation

* Better rendering of patreon logo

* Prototyped new hub and endpoint in auth controller

* Delete authWindow.js

* Update index.js

* Update electron.js

* Update LoginContentContainer.tsx

* Update accountStore.ts

* Redirect

* Update accountStore.ts

* Updated translation

* Added callback logic

* Changed redirect url

* Updated changelog

* Added mac osx support for new auth flow

* Cleanup

* Fixed typo

Co-authored-by: Petter <petterannerwall@gmail.com>

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -2,7 +2,7 @@
   "action": {
     "finish": "Finish",
     "next": "Next",
-    "authorize": "Authorize",
+    "authorize": "Log in with pathofexile.com",
     "reset": "Reset",
     "restart_application": "Restart",
     "clear_and_restart_application": "Reset data and restart",
@@ -76,6 +76,7 @@
     "select_profile": "Select profile",
     "select_character": "Select character",
     "select_stash_tabs": "Select stash tabs",
+    "select_platform": "Select platform",
     "filter_stash_tabs": "Filter stash tabs",
     "profile_placeholder": "Select a profile",
     "group_name": "Group name",
