fix: threshold typos

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -124,8 +124,8 @@
     "not_available": "N/A",
     "hour_suffix": "/ h",
     "low_confidence_pricing": "Activate low confidence pricing",
-    "price_treshold": "Price treshold",
-    "total_price_treshold": "Total price treshold",
+    "price_threshold": "Price threshold",
+    "total_price_threshold": "Total price threshold",
     "requires_snapshot_info": "* = requires a new snapshot to take effect",
     "fetch_snapshot_spinner_title": "Fetching snapshots",
     "initiating_session_spinner_title": "Initiating session",
@@ -157,16 +157,16 @@
   "value": {
     "none": "None",
     "low_confidence_pricing": "Low confidence",
-    "price_treshold": "Price treshold",
-    "total_price_treshold": "Total price treshold",
+    "price_threshold": "Price threshold",
+    "total_price_threshold": "Total price threshold",
     "auto_snapshotting": "Auto snapshotting",
     "auto_snapshot_interval": "Snapshotting interval",
     "hardware_acceleration": "Hardware Acceleration"
   },
   "helper_text": {
     "low_confidence_pricing": "Includes prices with less than 10 listings",
-    "price_treshold": "Sets the cutoff for including items",
-    "total_price_treshold": "Sets the cutoff for including total stack of items",
+    "price_threshold": "Sets the cutoff for including items",
+    "total_price_threshold": "Sets the cutoff for including total stack of items",
     "auto_snapshotting": "Handles snapshotting for you at set intervals",
     "auto_snapshot_interval": "Sets the interval for auto snapshotting",
     "ui_scale": "Sets the UI scale",
