--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -153,7 +153,13 @@
     "support_us": "Support Us",
     "reset_to_default": "Reset to default",
     "enable_hardware_acceleration": "Enable Hardware Acceleration",
-    "new_character_no_league_in_pricing_league": "Newly created character and can't see the league it's in? Refresh Exilence Next (ctrl + r)."
+    "new_character_no_league_in_pricing_league": "Newly created character and can't see the league it's in? Refresh Exilence Next (ctrl + r).",
+    "tft_discord": "TFT Discord",
+    "tft_bulk": "TFT bulk sell",
+    "asking_price": "Asking Price",
+    "generated_at": "Generated at",
+    "generated_by": "via Exilence Next",
+    "powered_by_poe_ninja": "Prices fetched from poe.ninja"
   },
   "value": {
     "none": "None",
