chore(tft): refactor

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -168,10 +168,24 @@
     "open_tft": "Open TFT Discord with desired bulk-* channel",
     "tft_demo": "See Video Guide",
     "generate_image": "Generate Image",
-    "ign": "In Game Name",
+    "generating_image": "Generating Image...",
+    "generated_image_success": "Image Generated!",
+    "ign": "In Game Name (set in profile)",
+    "active_league": "Active League (set in profile)",
+    "price_league": "Price League (set in profile)",
     "twice": "TWICE",
     "paste": "ctrl+v",
-    "paste_reason": "(first time for image, second time for text message)"
+    "paste_reason": "(first time for image, second time for text message)",
+    "breachstones": "Breachstones",
+    "catalysts": "Catalysts",
+    "delirium_orbs": "Delirium Orbs",
+    "divination_cards": "Divination Cards",
+    "essences": "Essences",
+    "fossils": "Fossils",
+    "incubators": "Incubators",
+    "prophecies": "Prophecies",
+    "scarabs": "Scarabs",
+    "sets": "Sets"
   },
   "value": {
     "none": "None",
