--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -25,7 +25,7 @@
     "error_boundary": "You encountered an error",
     "net_worth": "Net worth",
     "settings": "Settings",
-    "tft_bulk_sell": "TFT Bulk Sell",
+    "bulk_sell": "Bulk Sell",
     "save_profile": "Edit profile",
     "create_profile": "Create new profile",
     "enter_acc_info": "Enter account information",
@@ -155,9 +155,10 @@
     "reset_to_default": "Reset to default",
     "enable_hardware_acceleration": "Enable Hardware Acceleration",
     "new_character_no_league_in_pricing_league": "Newly created character and can't see the league it's in? Refresh Exilence Next (ctrl + r).",
-    "tft_discord": "TFT Discord",
-    "tft_bulk": "TFT bulk sell",
+    "bulk": "Bulk sell",
     "asking_price": "Asking Price",
+    "current_price": "Current Price (based on table data)",
+    "asking_price_percentage": "Current Price %",
     "generated_at": "Generated at",
     "generated_by": "via Exilence Next",
     "powered_by_poe_ninja": "Prices fetched from poe.ninja",
@@ -165,8 +166,8 @@
     "steps": "Steps",
     "column_presets": "Column Presets",
     "generated_message": "Generated Message",
-    "open_tft": "Open TFT Discord with desired bulk-* channel",
-    "tft_demo": "See Video Guide",
+    "share_bulk_sell": "Share generated image with text",
+    "bulk_sell_demo": "See Video Guide",
     "generate_image": "Generate Image",
     "generating_image": "Generating Image...",
     "generated_image_success": "Image Generated!",
@@ -185,7 +186,8 @@
     "incubators": "Incubators",
     "prophecies": "Prophecies",
     "scarabs": "Scarabs",
-    "sets": "Sets"
+    "sets": "Sets",
+    "note_discord": "Note for pasting into Discord"
   },
   "value": {
     "none": "None",
