--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -25,7 +25,7 @@
     "error_boundary": "You encountered an error",
     "net_worth": "Net worth",
     "settings": "Settings",
-    "bulk_sell": "Bulk Sell",
+    "bulk_sell": "Bulk sell",
     "save_profile": "Edit profile",
     "create_profile": "Create new profile",
     "enter_acc_info": "Enter account information",
