--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -175,7 +175,7 @@
     "active_league": "Active League (set in profile)",
     "price_league": "Price League (set in profile)",
     "twice": "TWICE",
-    "paste": "ctrl+v",
+    "paste": "Ctrl+V",
     "paste_reason": "(first time for image, second time for text message)",
     "breachstones": "Breachstones",
     "catalysts": "Catalysts",
