feat: remove unnecessary comma

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -191,7 +191,7 @@
     "prophecies": "Prophecies",
     "scarabs": "Scarabs",
     "sets": "Sets",
-    "note_discord": "Note for pasting into Discord",
+    "note_discord": "Note for pasting into Discord"
   },
   "value": {
     "none": "None",
